# praat

./: .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac  makefile
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2  traces.3
makefiles/: makefile.defs.cygwin64  makefile.defs.darmin32  makefile.defs.darmin64  makefile.defs.linux.alsa  makefile.defs.linux.barren  makefile.defs.linux.pulse  makefile.defs.linux.silent  makefile.defs.linuxs.pulse
t/: chinese_text.t  code.t  menu_speed.t
t/contrib/: KNN.t
t/dwsys/: regex.t
t/dwtools/: discriminant.t  klatt_slope.t
t/fon/: data.t  endian.t  extract_intervals.t  fft_speed.t  formantgrid.t  fourier.t  pitch.t  pitchtier.t  sound_files.t  sound_to_formant.t  sound_to_lpc.t  spectrum_draw.t  stereo_formula.t  texio.t  textgrid.t  textio_speed.t
t/kar/: MacRoman.t  unicode.t  unicode16.t
t/manually/: README
t/num/: binomialQ.t  fisherQ.t  math_functions.t  mean.t  min.t  stdev.t
t/script/: RBM.t  arithmetic.t  arrays.t  indexed_variables.t  procedures.t  script.t  softmax.t  tensor.t  text100MB.t  undefined.t  vectors.t
t/stat/: linear_regression.t  logisticRegression.t  table.t
t/sys/: local_variables.t
t/test/: more.proc
